--- a/q9.html
+++ b/q9.html
@@ -7,8 +7,17 @@
     <title>Div tag</title>
      
     <style>
+        table,th,td{
+            border: 2px solid black;
+            text-align: center;
+            
+        }
+        th,td{
+            color: black;
+            padding: 20px;
+        }
         div {
-            color: green;
+            color: black;
             background-color: greenyellow;
             margin: 2px;
             font-size: 25px;
@@ -16,7 +25,26 @@
     </style>
 </head>
 <body>
-    <p><div>Hello, My name is Devansh yadav</div> I am currently pursuing B.tech in Information technology from Noida Institute of Technology. I look forward too soon be working for a well reputed firm<br>
-    <span style="background-color: aqua;"> I really like playing sports</span> all type of but if I had to pick a favorite that'll be football</p>
+   
+    <table>
+        <tr>
+            <th><div>Department name:</div></th><th><span style="background-color: green;">BLock:</span></th><th> floor:</th>
+        </tr>
+        <tr>
+            <td><div>CSE</div></td><td><span style="background-color: green;">D</span></td><td>5</td>
+        </tr>
+        <tr>
+            <td><div>IT</div></td><td><span style="background-color: green ;">D</td><td>5</td>
+        </tr>
+        <tr>
+            <td><div>AIML</div></td><td><span style="background-color: green ;">B</span></td><td>4</td>
+        </tr>
+        <tr>
+            <td><div>CS DS</div></td><td><span style="background-color: green ;">B</span></td><td>4</td>
+        </tr>
+        <tr>
+            <td><div>CS bS<div></td><td><span style="background-color: green ;">B</span></td><td>4</td>
+        </tr>
+    </table>
 </body>
 </html>
